Change database URI

--- a/savingservice/src/main/resources/application.properties
+++ b/savingservice/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://dev-kadmos:5432/kadmos
+spring.datasource.url=jdbc:postgresql://kadmos-data:5432/kadmos
 spring.datasource.username=kadmos
 spring.datasource.password=Pass2020! 
 #always initialize a database using scripts, at the moment it stays here we can move it to tes env
