Create application properties for demo

--- a/savingservice/src/main/resources/application.properties
+++ b/savingservice/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 server.port=8081
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://kadmos-data:5432/kadmos
+spring.datasource.url=jdbc:postgresql://localhost:5432/kadmos
 spring.datasource.username=kadmos
 spring.datasource.password=Pass2020! 
 #always initialize a database using scripts, at the moment it stays here we can move it to tes env
 spring.sql.init.mode=never
 spring.jpa.generate-ddl=true
 #Drive by Hibernate for creating database table and puts data
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #script-based DataSource initialization to be able to build upon the schema creation by Hibernate
-spring.datasource.initialize=true
+spring.datasource.initialize=false
 spring.jpa.defer-datasource-initialization=false
 spring.sql.init.continue-on-error=true
 spring.jpa.hibernate.show-sql=true
