Change test URL with service A and B URL

--- a/apigateway/src/main/resources/application-test.properties
+++ b/apigateway/src/main/resources/application-test.properties
@@ -1,2 +1,3 @@
-destination.uri=http://localhost:${wiremock.server.port}
+service.a.uri=http://localhost:${wiremock.server.port}
+service.b.uri=http://localhost:${wiremock.server.port}
 spring.cloud.gateway.httpclient.response-timeout=2000
