--- a/apigateway/src/main/resources/application.properties
+++ b/apigateway/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-destination.uri=https://swapi.dev
+#destination.uri=https://swapi.dev
+service.a.uri=http://localhost:8081
+service.b.uri=http://localhost:8082
 spring.cloud.gateway.httpclient.response-timeout=5000
