--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,18 +10,24 @@ services:
     ports:
       - 5432:5432
     environment:
-    - POSTGRES_USER=kadmos
-    - POSTGRES_PASSWORD=Pass2020!
-    - POSTGRES_DB=kadmos
+      - POSTGRES_USER=kadmos
+      - POSTGRES_PASSWORD=Pass2020!
+      - POSTGRES_DB=kadmos
     networks:
-    - kadmos-net
-  
+      - kadmos-net
+
   saving-service-a:
     image: savings-a
     container_name: 'saving-service-a'
-    #depends-on:
-    #- kadmos-postgres
     ports:
-    - 8081:8081
+      - 8081:8081
     networks:
-    - kadmos-net
+      - kadmos-net
+
+  gateway:
+    image: api-gateway
+    container_name: 'gateway'
+    ports:
+      - 8080:8080
+    networks:
+      - kadmos-net
