Add api gatewy logs to file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,5 +59,7 @@ services:
     container_name: 'gateway'
     ports:
       - 8080:8080
+    volumes:
+      - ./logs:/logs
     networks:
       - kadmos-net
