--- a/apigateway/Dockerfile
+++ b/apigateway/Dockerfile
@@ -1,4 +1,5 @@
 FROM openjdk:12-jdk-alpine
 COPY /build/libs/apigateway-*.jar apigateway.jar
+RUN mkdir ./logs
 EXPOSE 8080
 CMD ["java","-jar","-Dspring.profiles.active=demo","apigateway.jar"]
